# raff-c

./: README.md  deps.toml
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml
src/: .gitignore  CMakeLists.txt  run.sh  test.swamp-pack
src/examples/: CMakeLists.txt  main.c
src/include/raff/: raff.h  tag.h  types.h  write.h
src/lib/: raff.c  write.c
